# mcu

task_1/hello_usb/: hello_usb.c
task_2/: terminal.py
task_2/Led_command/: CMakeLists.txt  Led_command.c
task_3/: plt_maker.py  terminal.py  terminal_but_smarter.py
task_3/ADC_but_smarter/hello_adc/: data.txt  hello_adc.c  plt_maker.py
task_3/hello_adc/: CMakeLists.txt  hello_adc.c
task_4/bme280_spi/: CMakeLists.txt  bme280_spi.c  data_1.csv  plt.py  terminal.py
task_5/hello_ili9341/: CMakeLists.txt  hello_ili9341.c
task_5/hello_ili9341/gradient/include/gradient/: gradient.h
task_5/hello_ili9341/gradient/src/: gradient.c
task_5/hello_ili9341/mathplot/: CMakeLists.txt
task_5/hello_ili9341/mathplot/include/mathplot/: mathplot.h
task_6/hello_ili9341/: CMakeLists.txt  hello_ili9341.c
task_6/hello_ili9341/mathplot/src/: mathplot.c
task_7/portable_device/: CMakeLists.txt  portable_device.c
task_7/portable_device/TimesNewRoman/: CMakeLists.txt
task_7/portable_device/TimesNewRoman/include/TimesNewRoman/: TimesNewRoman.h
task_7/portable_device/TimesNewRoman/src/: TimesNewRoman.c
task_7/portable_device/bme280/: CMakeLists.txt
task_7/portable_device/bme280/include/bme280/: bme280.h
task_7/portable_device/bme280/src/: bme280.c
